🏉🐛 Checkpoint ./views/home.ejs:44341290/42

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,10 +29,10 @@
     <hr> 
     <div>
       <div>
-        <p> Sei interessato a diventare un tutor? <a href="/register">Register</a></p>
+        <p> Sei interessato a diventare un tutor? <a href="/register">Aggiungi Tutor</a></p>
       </div>
       <hr>
-      <p> Sei già un tutor? <a href="/login">Login</a></p>
+      <p> Sei già un tutor? <a href="/login">Elimina Tutor</a></p>
     </div>
   </body>
   
