--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,23 +1,20 @@
 <html>
   <head>
-    <script src= "client.js" defer></script>
   </head>
 
   <body>
-    <h1 class = "logo">
-      Tutoring Università
-    </h1>
+    <h1>Tutoring Università</h1>
     <h2>
       Ricerca un Tutor Adatto a Te
     </h2>
     
-    <div class="search-wrapper">
+    <div>
       <label for= "search"> Cerca Tutor</label><br>
       <input type = "search" id = " search" data-search>
       <button> Cerca</button>
     </div>
     
-    <div class="user-cards" data-user-cards-container></div>
+    <div></div>
     <template data-user-template>
       <div class="card">
         <div class="header" data-header></div>
@@ -29,10 +26,10 @@
     <hr> 
     <div>
       <div>
-        <p> Sei interessato a diventare un tutor? <a href="/register">Aggiungi Tutor</a></p>
+        <p> Vuoi aggiungere un tutor? <a href="/register">Aggiungi Tutor</a></p>
       </div>
       <hr>
-      <p> Sei già un tutor? <a href="/login">Elimina Tutor</a></p>
+      <p> Vuoi eliminare un tutor? <a href="/login">Elimina Tutor</a></p>
     </div>
   </body>
   
