😼💆 Checkpoint ./server.js:44341290/710 ./views/addTutor.ejs:44341290/359

--- a/views/addTutor.ejs
+++ b/views/addTutor.ejs
@@ -26,7 +26,14 @@
     </div>
     <br>
     <button type="submit" id="button">Aggiungi</button>
-  </form>
   </body>
+
+<datalist id="nome-università">
+        <option value="Università Politecnica delle Marche">
+        <option value="Università degli Studi di Camerino">
+        <option value="Università degli Studi di Macerata">
+        <option value="Università degli Studi di Urbino ">
+        <option value="Università degli Studi di Ferrara ">
+    </datalist>
   
 </html>
