--- a/views/addTutor.ejs
+++ b/views/addTutor.ejs
@@ -18,7 +18,7 @@
     </div>
     <div>
       <label for="università">Università</label>
-      <input type ="text" id="università" name="università" >
+      <input list="nome-università" id="università" name="università" required>
     </div>
     <div>
       <label for="corso">Corso di Studi</label>
@@ -28,5 +28,13 @@
     <button type="submit" id="button">Aggiungi</button>
   </body>
 
+  
+<datalist id="nome-università">
+        <option value="Università Politecnica delle Marche">
+        <option value="Università degli Studi di Camerino">
+        <option value="Università degli Studi di Macerata">
+        <option value="Università degli Studi di Urbino ">
+        <option value="Università degli Studi di Ferrara ">
+    </datalist>
   
 </html>
