💠🕴 Checkpoint ./views/home.ejs:44341290/26 ./server.js:44341290/105

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     <div>
       <label for= "search"> Cerca Tutor</label><br>
       <input type = "search" id = " search" data-search>
-      <button> Cerca</button>
+      <button id = btn1> Cerca</button>
     </div>
     
     <div></div>
