--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script defer src="server.js"></script>   
   </head>
 
   <body>
@@ -11,7 +12,7 @@
     <div>
       <label for= "search"> Cerca Tutor</label><br>
       <input type = "search" id = " search" data-search>
-      <button id = btn1> Cerca</button>
+      <button type="submit" id="btn1"> Cerca</button>
     </div>
     
     <div></div>
