--- a/views/addTutor.ejs
+++ b/views/addTutor.ejs
@@ -9,7 +9,11 @@
     </h2>
     
     <div>
-      <label for="name">Name</label>
+      <label for="name">Nome</label>
+      <input type="text" id="name" name="name" >
+    </div>
+    <div>
+      <label for="surname">Cognome</label>
       <input type="text" id="name" name="name" >
     </div>
     <div>
@@ -17,8 +21,8 @@
       <input type="email" id="email" name="email" >
     </div>
     <div>
-      <label for="università">Università</label>
-      <input list="nome-università" id="università" name="università" required>
+      <label for="universita">Università</label>
+      <input type="text" id="universita" name="universita" >
     </div>
     <div>
       <label for="corso">Corso di Studi</label>
