--- a/views/addTutor.ejs
+++ b/views/addTutor.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <<link href="”>  ></script>
+    <link href= "https://progetto-piattaforme-territorio.glitch.me">
   </head>
 
   <body>
