--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,8 @@
     
     <div>
       <label for= "search"> Cerca Tutor</label><br>
-      <input type = "search" id = " search" data-search>
-      <button type="submit" id="btn1"> Cerca</button>
+      <input type = "text" id = "researchValue" placeholder = "Cerca">
+      <button type="submit" id="btn1" onclick="getTutors()"> Cerca</button>
     </div>
     
     <div></div>
@@ -35,7 +35,9 @@
   </body>
   
   <script>
-    
+    async function getTutors(){
+      const researchValue = document.getElementById()
+    }
   </script>
   
 </html>
