🖇🍥 Checkpoint ./views/home.ejs:44341290/157

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,12 @@
   
   <script>
     async function getTutors(){
-      const researchValue = document.getElementById()
+      const researchValue = document.getElementById("researchValue").value;
+      
+      if(!tutor){
+        alert("Inserire uno tutor.");
+        return;
+      }
     }
   </script>
   
