🍗👨‍👨‍👦 Checkpoint ./views/home.html:44341290/88

--- a/views/home.html
+++ b/views/home.html
@@ -37,9 +37,11 @@
   <script>
     async function getTutors(){
       const researchValue = document.getElementById("researchValue").value;
+      console.log("alert");
       
       if(!tutor){
         alert("Inserire uno tutor.");
+        console.log("alert");
         return;
       }
     }
