⛽️👍 Checkpoint ./server.js:44341290/105 ./views/home.html:44341290/123

--- a/views/home.html
+++ b/views/home.html
@@ -43,7 +43,9 @@
       }
       
       const endpoint = new URL("https://progetto-piattaforme-territorio.glitch.me/home/research");
-      console.log(endpoint);
+      
+      const response = await fetch(endpoint);
+      console.log(response);
       
     }
   </script>
