🚙🍩 Checkpoint ./views/home.html:44341290/42 ./tutors.json:44341290/20 ./server.js:44341290/20

--- a/views/home.html
+++ b/views/home.html
@@ -44,7 +44,7 @@
       
       const endpoint = new URL("https://progetto-piattaforme-territorio.glitch.me/home/research");
       
-      const response = await fetch(endpoint);
+      const response = await fetch(endpoint).then((response) => response.json());
       console.log(response);
       
     }
