--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href= "https://progetto-piattaforme-territorio.glitch.me">
   </head>
 
   <body>
@@ -31,7 +30,7 @@
       <input type="text" id="corso" name="corso" >
     </div>
     <br>
-    <button type="button" id="newValue" >Aggiungi</button>
+    <button type="button" id="newValue" onclick= "addTutor()" >Aggiungi</button>
   </body>
 
     <script>
@@ -45,8 +44,10 @@
       
       const endpoint = new URL("https://progetto-piattaforme-territorio.glitch.me/home/addTutor");
       
-      const response = await fetch(endpoint);
+      const response = await fetch(endpoint).then((response)=> response.send("200 OK"));
       console.log(response);
+      console.log("File written successfully");
+      console.log(tutors);
       
     }
   </script>
