--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -35,7 +35,7 @@
 
     <script>
     async function addTutor(){
-      const researchValue = document.getElementById("newValue").value;
+      const newValue = document.getElementById("newValue").value;
       
       if(!newValue){
         alert("Inserire uno tutor.");
