--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -9,7 +9,7 @@
       Registra un nuovo Tutor!
     </h2>
     
-    <div>
+    <div id="newTutor">
       <label for="name">Nome</label>
       <input type="text" id="name" name="name" >
     </div>
