🏗🚧 Checkpoint ./views/addTutor.html:44341290/2154

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -35,19 +35,41 @@
 
     <script>
     async function addTutor(){
-      const newValue = document.getElementById("newValue").value;
+      const newValue    = document.getElementById("newValue").value;
+      const data        = {
+        name       : document.getElementById("name").value;
+        surname    : document.getElementById("surname").value;;
+        email      : document.getElementById("email").value;
+        universita : document.getElementById("universita").value;
+        corso      : document.getElementById("corso").value;
+      };
       
       if(!newValue){
         alert("Inserire uno tutor.");
         return;
       }
       
-      const endpoint = new URL("https://progetto-piattaforme-territorio.glitch.me/home/addTutor");
+      //const endpoint = new URL("https://progetto-piattaforme-territorio.glitch.me/home/addTutor");
       
-      const response = await fetch(endpoint);
+      fetch("https://progetto-piattaforme-territorio.glitch.me/home/addTutor", {
+        method: 'POST', // or 'PUT'
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(data),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          console.log('Success:', data);
+        })
+        .catch((error) => {
+          console.error('Error:', error);
+        });
+      
+      /*const response = await fetch(endpoint);
       console.log(response);
       console.log("File written successfully");
-      console.log(tutors);
+      console.log(tutors);*/
       
     }
   </script>
