--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -38,7 +38,7 @@
       const newValue    = document.getElementById("newValue").value;
       const data        = {
         name       : document.getElementById("name").value;
-        surname    : document.getElementById("surname").value;;
+        surname    : document.getElementById("surname").value;
         email      : document.getElementById("email").value;
         universita : document.getElementById("universita").value;
         corso      : document.getElementById("corso").value;
