--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -35,6 +35,8 @@
 
     <script>
     async function addTutor(){
+      const options = {
+
       
       fetch('https://jsonplaceholder.typicode.com/posts', options)
       .then(data => {
