🌌⛵️ Checkpoint ./tutors.json:44341290/884 ./server.js:44341290/227 ./views/addTutor.html:44341290/19

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -40,7 +40,8 @@
         surname : document.getElementById("surname").value,
         email : document.getElementById("email").value,
         universita : document.getElementById("universita").value,
-        corso : document.getElementById("corso").value
+        corso : document.getElementById("corso").value,
+        esami:[] 
       })
       
       const options = {
