🖼🐉 Checkpoint ./tutors.json:44341290/155 ./views/addTutor.html:44341290/43

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -36,6 +36,7 @@
     <script>
     async function addTutor(){
       const newTutor = ({
+        id: Date.now().toString(),
         name : document.getElementById("name").value,
         surname : document.getElementById("surname").value,
         email : document.getElementById("email").value,
