🎹⛱ Checkpoint ./server.js:44341290/19 ./views/addTutor.html:44341290/205 ./tutors.json:44341290/199

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -54,13 +54,9 @@
       };
       
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
-      .then(data => {
-          if (!data.ok) {
-            throw Error(data.status);
-           }
-           return data.json();
-      }).catch(e => {
-          console.log(e);
+      .then((responce)=> responce.status)
+      .catch(e => {
+          console.log("errore");
       });
     }
   </script>
