👚🏂 Checkpoint ./views/addTutor.html:44341290/9

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -48,7 +48,7 @@
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', "POST")
       .then((responce)=> responce.status)
       .catch(e => {
-          console.log("errore");
+          console.log(e);
       });
     }
   </script>
