--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -54,9 +54,8 @@
       };
       
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
-      .then((responce)=> responce.status)
       .catch(e => {
-          console.log("errore");
+          console.log(e);
       });
     }
   </script>
