🏙🐲 Checkpoint ./views/addTutor.html:44341290/310 ./server.js:44341290/114 ./tutors.json:44341290/1015

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -54,8 +54,13 @@
       };
       
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
+      .then(response => {
+        response.json());
+        alert("Nuovo tutor aggiunto!");
+      }
       .catch(e => {
           console.log(e);
+          alert("ERRORE!");
       });
     }
   </script>
