🚔🌖 Checkpoint ./views/addTutor.html:44341290/218 ./tutors.json:44341290/2786

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -23,7 +23,8 @@
     </div>
     <div>
       <label for="universita">Università</label>
-      <input type="text" id="universita" name="universita" list="nome-universita" autocomplete= "on">
+      <input list="nome-università" name="universita" id="universita">
+      <!input list="nome-universita" id="universita" name="universita" autocomplete= "on">
     </div>
     <div>
       <label for="corso">Corso di Studi</label>
