--- a/views/home.html
+++ b/views/home.html
@@ -26,10 +26,10 @@
     <hr> 
     <div>
       <div>
-        <p> Vuoi aggiungere un tutor? <a href="/register">Aggiungi Tutor</a></p>
+        <p> Vuoi aggiungere un tutor? <a href="/home/addTutor">Aggiungi Tutor</a></p>
       </div>
       <hr>
-      <p> Vuoi eliminare un tutor? <a href="/login">Elimina Tutor</a></p>
+      <p> Vuoi eliminare un tutor? <a href="/home/deleteTutor">Elimina Tutor</a></p>
     </div>
   </body>
   
