--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -64,9 +64,12 @@
       };
       //eseguo la fetch
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
-      .then(response => {
-        response.json();
-        alert("Nuovo tutor aggiunto!");
+      .then((response) => {
+        if (response.ok) {
+          alert("Nuovo tutor aggiunto!");
+          return response.json();
+        }
+        alert('ERROR!Something went wrong!');
       })
       .catch(e => {
           console.log(e);
@@ -77,11 +80,22 @@
   </script>
   
 <datalist id="nome-università">
+  <!Università delle Marche>
   <option value="Università Politecnica delle Marche"></option>
-        <option value="Università degli Studi di Camerino"></option>
-        <option value="Università degli Studi di Macerata"></option>
-        <option value="Università degli Studi di Urbino "></option>
-        <option value="Università degli Studi di Ferrara "></option>
+  <option value="Università degli Studi di Camerino"></option>
+  <option value="Università degli Studi di Macerata"></option>
+  <option value="Università degli Studi di Urbino "></option>
+  <option value="Università degli Studi di Ferrara "></option>
+  <!Università dell'Abruzzo>
+  <option value="Università degli Studi Gabriele d'Annunzio"></option>
+  <option value="Università degli Studi dell'Aquila"></option>
+  <option value="Università degli Studi di Teramo"></option>
+  <! Università della Basilicata>
+  <option value="Università degli Studi della Basilicata"></option>
+  <! Università della Calabria>
+  <option value="Università degli Studi Magna Græcia di Catanzaro"></option>
+  <option value="Università della Calabria"></option>
+  <option value="Università degli Studi Mediterranea di Reggio Calabria"></option>
 </datalist>
   
 </html>
