✊👣 Checkpoint ./views/addTutor.html:44341290/2353

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -85,7 +85,6 @@
   <option value="Università degli Studi di Camerino"></option>
   <option value="Università degli Studi di Macerata"></option>
   <option value="Università degli Studi di Urbino "></option>
-  <option value="Università degli Studi di Ferrara "></option>
   <!Università dell'Abruzzo>
   <option value="Università degli Studi Gabriele d'Annunzio"></option>
   <option value="Università degli Studi dell'Aquila"></option>
@@ -96,6 +95,46 @@
   <option value="Università degli Studi Magna Græcia di Catanzaro"></option>
   <option value="Università della Calabria"></option>
   <option value="Università degli Studi Mediterranea di Reggio Calabria"></option>
+  <! Università della Campania>
+  <option value="Università degli Studi di Napoli Federico II"></option>
+  <option value="Università degli Studi di Napoli L'Orientale"></option>
+  <option value="Università degli Studi di Napoli Parthenope"></option>
+  <option value="Università degli Studi della Campania Luigi Vanvitelli"></option>
+  <option value="Università degli Studi di Salerno"></option>
+  <option value="Università degli Studi del Sannio"></option>
+  <! Università dell'Emilia Romagna>
+  <option value ="Alma mater studiorum - Università di Bologna"></option>
+  <option value ="Università degli Studi di Ferrara"></option>
+  <option value ="Università degli Studi di Modena e Reggio Emilia"></option>
+  <option value ="Università degli Studi di Parma"></option>
+  <! Università Fiuli Venzia Giulia>
+  <option value ="Università degli Studi di Trieste"></option>
+  <option value ="Università degli Studi di Udine"></option>
+  <! Università del Lazio>
+  <option value ="Università degli Studi di Cassino e del Lazio Meridionale"></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <! Università della Liguria>
+  <option value =""></option>
+  <!Università del Lombardia>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  <!Università del Molise>
+  <option value =""></option>
+  <! Università del Piemonte>
+  <option value =""></option>
+  <option value =""></option>
+  <option value =""></option>
+  
 </datalist>
   
 </html>
