📖🎯 Checkpoint ./views/addTutor.html:44341290/710

--- a/views/addTutor.html
+++ b/views/addTutor.html
@@ -112,28 +112,29 @@
   <option value ="Università degli Studi di Udine"></option>
   <! Università del Lazio>
   <option value ="Università degli Studi di Cassino e del Lazio Meridionale"></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
+  <option value ="Università degli Studi di Roma Foro Italico"></option>
+  <option value ="Università degli Studi di Roma La Sapienza"></option>
+  <option value ="Università degli Studi di Roma Tor Vergata"></option>
+  <option value ="Università degli Studi Roma Tre"></option>
+  <option value ="Università degli Studi della Tuscia"></option>
   <! Università della Liguria>
-  <option value =""></option>
+  <option value ="Università degli Studi di Genova"></option>
   <!Università del Lombardia>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
+  <option value ="Università degli Studi di Bergamo"></option>
+  <option value ="Università degli Studi di Brescia"></option>
+  <option value ="Politecnico di Milano"></option>
+  <option value ="Università degli Studi di Milano"></option>
+  <option value ="Università degli Studi di Milano-Bicocca"></option>
+  <option value ="Istituto Universitario di Studi Superiori"></option>
+  <option value ="Università degli Studi di Pavia"></option>
+  <option value ="Università degli Studi dell'Insubria"></option>
   <!Università del Molise>
-  <option value =""></option>
+  <option value ="Università degli Studi del Molise"></option>
   <! Università del Piemonte>
-  <option value =""></option>
-  <option value =""></option>
-  <option value =""></option>
+  <option value ="Università degli Studi del Piemonte Orientale Amedeo Avogadro"></option>
+  <option value ="Università degli Studi di Torino"></option>
+  <option value ="Politecnico di Torino"></option>
+  <!Università della Puglia>
   
 </datalist>
   
