--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
     <div>
       <label for= "search"> Cerca Tutor</label><br>
       <input type = "text" id = "researchValue" placeholder = "Cerca">
-      <button type="button" id="btn1" onclick="getTutors()"> Cerca</button>
+      <button type="button" id="btn1" onclick="researchTutors()"> Cerca</button>
     </div>
     <br>
     
