--- a/views/home.html
+++ b/views/home.html
@@ -84,8 +84,11 @@
   
   
   
-  <! FUNZIONE PER CERCARE UN TUTOR >
   <script>
+    let filtroEsame = false;
+    let filtroEmail = false;
+    let 
+    <! FUNZIONE PER CERCARE UN TUTOR >
     async function researchTutors(){
       const researchValue = document.getElementById("researchValue").value;
       
@@ -100,10 +103,10 @@
       console.log(response);
       
     }
-  </script>
+    
+    <! FUNZIONE PER SELEZIONARE I FILTRI DI RICERCA >
   
-  <! FUNZIONE PER AGGIUNGERE UN NUOVO TUTOR >
-  <script>
+    <! FUNZIONE PER AGGIUNGERE UN NUOVO TUTOR >
     async function addTutor(){
       
       //definisco i dati del nuovo tutor aggiungendo alcuni campi di default
@@ -139,20 +142,36 @@
       //pulisce la form
       document.getElementById("addTutor").reset();
     }
-  </script>
-  
-  <! FUNZIONE PER ELIMINARE UN TUTOR >
-  <script>
+
+    <! FUNZIONE PER ELIMINARE UN TUTOR >
     async function deleteTutor(){
-      
+      //opzioni per la fetch
+      const options = {
+        method: 'POST',
+        headers: {
+        'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(newTutor),
+      };
+      //eseguo la fetch
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/addTutor', options)
+      .then((response) => {
+        if (response.ok) {
+          alert("Nuovo tutor aggiunto!");
+          return response.json();
+        }
+        alert('ERROR!Something went wrong!');
+      })
+      .catch(e => {
+          console.log(e);
+      });
     }
-  </script>
   
-  <! FUNZIONE PER MODIFICARE UN TUTOR >
-  <script>
+    <! FUNZIONE PER MODIFICARE UN TUTOR >
     async function updateTutor(){
       
     }
+    
   </script>
 
   <! LISTA UNIVERSITA' PER AGGIUNGERE UN NUOVO TUTOR >
