--- a/views/home.html
+++ b/views/home.html
@@ -87,7 +87,11 @@
   <script>
     let filtroEsame = false;
     let filtroEmail = false;
-    let 
+    let filtroNome  = false;
+    let filtroCognome = false;
+    let filtroUni   = false;
+    let filtroCorso = false;
+
     <! FUNZIONE PER CERCARE UN TUTOR >
     async function researchTutors(){
       const researchValue = document.getElementById("researchValue").value;
@@ -97,14 +101,73 @@
         return;
       }
       
-      const endpoint = new URL("https://progetto-piattaforme-territorio.glitch.me/home/research");
+      const searchTutor = ({
+        id: Date.now().toString(),
+        name : document.getElementById("name").value,
+        surname : document.getElementById("surname").value,
+        email : document.getElementById("email").value,
+        universita : document.getElementById("universita").value,
+        corso : document.getElementById("corso").value,
+        esami:[] 
+      })
       
-      const response = await fetch(endpoint).then((response) => response.json());
-      console.log(response);
+      //opzioni per la fetch
+      const options = {
+        method: 'GET',
+        headers: {
+        'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(searchTutor),
+      };
+      
+      //eseguo la fetch
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/researchTutor', options)
+      .then((response) => {
+        if (response.ok) {
+          alert("Nuovo tutor aggiunto!");
+          return response.json();
+        }
+        alert('ERROR!Something went wrong!');
+      })
+      .catch(e => {
+          console.log(e);
+      });
+      //pulisce la form
+      document.getElementById("addTutor").reset();
       
     }
     
-    <! FUNZIONE PER SELEZIONARE I FILTRI DI RICERCA >
+    <! FUNZIONI PER SELEZIONARE I FILTRI DI RICERCA >
+    function setFiltroNome(){
+      let set = !filtroNome;
+      
+      return set;
+    }
+    
+    function setFiltroCognome(){
+      let set = !filtroCognome;
+      return set;
+    }
+    
+    function setFiltroEmail(){
+      let set = !filtroEmail;
+      return set;
+    }
+    
+    function setFiltroUniversita(){
+      let set = !filtroUniversita;
+      return set;
+    }
+    
+    function setFiltroCorso(){
+      let set = !filtroCorso;
+      return set;
+    }
+    
+    function setFiltroEsame(){
+      let set = !filtroEsame;
+      return set;
+    }
   
     <! FUNZIONE PER AGGIUNGERE UN NUOVO TUTOR >
     async function addTutor(){
