🕌📷 Checkpoint ./views/home.html:44341290/88

--- a/views/home.html
+++ b/views/home.html
@@ -101,6 +101,8 @@
         return;
       }
       
+      if((filtroUni == true) && (filtroNome = false) &&(filtroCognome == true)
+      
       const searchTutor = ({
         id: Date.now().toString(),
         name : document.getElementById("name").value,
