Modifiche file html

--- a/views/home.html
+++ b/views/home.html
@@ -101,7 +101,9 @@
         return;
       }
       
-      if((filtroUni == true) && (filtroNome = false) &&(filtroCognome == true)
+      if((filtroUni == true) && (filtroNome = false) && (filtroCognome == false) && (filtroCorso == false){
+         filtroUni = true;
+         }
       
       const searchTutor = ({
         id: Date.now().toString(),
